--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<html>
+<html> 
   <head> 
-    <title>666</title> 
+    <title>旅游攻略</title> 
   </head> 
   <body> 
-    <p>=-=</p> 
+    <p>如何玩遍桂林Top景点？看了这个桂林旅游攻略，立刻就想出发了！</p> 
+    <p img src="/1.jpg"></p> 
   </body> 
 </html>
