--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   </head> 
   <body> 
     <p>如何玩遍桂林Top景点？看了这个桂林旅游攻略，立刻就想出发了！</p> 
-    <p><img src=" https://sdpt16140244.github.io/1.jpg
-/1.jpg"></p> 
+    <p><img src="/1.jpg></p> 
   </body> 
 </html>
