--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>旅游攻略</title> 
   </head> 
   <body> 
-    <p><img src=" https://sdpt16140244.github.io/2.jpg"></p> 
+    <p><img src=" https://sdpt16140244.github.io/2.jpg"></p>
+    <link rel="shortcut icon" href="/3.ico" />
   </body> 
 </html>
